--- a/config/database.yml
+++ b/config/database.yml
@@ -1,45 +1,45 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
-default: &default
-  adapter: sqlite3
-  pool: 5
-  timeout: 5000
-
-development:
-  <<: *default
-  database: db/development.sqlite3
-
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-test:
-  <<: *default
-  database: db/test.sqlite3
-
-production:
-  <<: *default
-  database: db/production.sqlite3
-  
-  # default: &default
-  # adapter: postgresql
-  # username: hyornzcxxccicq
-  # password: zFCmZKl2XbleUac_yBzTeid2Pz
-#   
+# # SQLite version 3.x
+# #   gem install sqlite3
+# #
+# #   Ensure the SQLite 3 gem is defined in your Gemfile
+# #   gem 'sqlite3'
+# #
+# default: &default
+  # adapter: sqlite3
+  # pool: 5
+  # timeout: 5000
+# 
 # development:
   # <<: *default
-  # database: ddrivbbeor2b07
-#  
-#   
+  # database: db/development.sqlite3
+# 
+# # Warning: The database defined as "test" will be erased and
+# # re-generated from your development database when you run "rake".
+# # Do not set this db to the same as development or production.
 # test:
   # <<: *default
-  # database: ddrivbbeor2b07
-#   
+  # database: db/test.sqlite3
 # 
 # production:
   # <<: *default
-  # database: ddrivbbeor2b07
-#   
+  # database: db/production.sqlite3
+  
+  default: &default
+  adapter: postgresql
+  username: genaoexkacqyqt
+  password: g-qwtynoK5K6edPGDDrlM7YsMA
+  
+development:
+  <<: *default
+  database: df63o8hjr0s3tt
+ 
+  
+test:
+  <<: *default
+  database: df63o8hjr0s3tt
+  
+
+production:
+  <<: *default
+  database: df63o8hjr0s3tt
+  
